--- a/toolbox/package.json
+++ b/toolbox/package.json
@@ -7,5 +7,17 @@
     "./lib/*": "./lib/*",
     "./components/*": "./components/*",
     "./styles/*": "./styles/*"
-  }
+  },
+  "dependencies": {
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-slot": "^1.2.3",
+    "normalize.css": "^8.0.1"
+  },
+  "peerDependencies": {
+    "react": "^18 || ^19",
+    "react-dom": "^18 || ^19"
+  },
+  "sideEffects": [
+    "./styles/*.css"
+  ]
 }
