--- a/biome.json
+++ b/biome.json
@@ -1,13 +1,15 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.1.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.2.0/schema.json",
 
-  "files": {  "experimentalScannerIgnores": ["node_modules", ".git", "dist", "build"]
-  },
+  "files": { "experimentalScannerIgnores": ["node_modules", ".git", "dist", "build"] },
 
   "linter": {
     "rules": {
       "suspicious": {
         "noArrayIndexKey": "off"
+      },
+      "correctness": {
+        "useUniqueElementIds": "off"
       }
     }
   },
