--- a/apps/hardware-picker-ai/package.json
+++ b/apps/hardware-picker-ai/package.json
@@ -10,6 +10,7 @@
     "biome:fix": "biome check --write ."
   },
   "dependencies": {
+    "@next/third-parties": "^15.4.6",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
