--- a/apps/upwork/package.json
+++ b/apps/upwork/package.json
@@ -9,17 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.4.6",
+    "next": "15.4.6",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "next": "15.4.6",
     "toolbox": "file:../../toolbox"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
