--- a/package.json
+++ b/package.json
@@ -1,29 +1,27 @@
 {
   "name": "projects-monorepo",
   "private": true,
-  "packageManager": "npm@11.5.2",
-  "workspaces": [
-    "apps/*",
-    "toolbox"
-  ],
+  "packageManager": "pnpm@10.14.0",
   "devDependencies": {
     "tsconfig-paths-webpack-plugin": "^4.2.0",
     "turbo": "^2.5.6"
   },
   "scripts": {
     "dev": "turbo run dev --parallel",
-    "dev:web": "turbo run dev --filter=@apps/top-tokens",
-    "dev:hardware": "turbo run dev --filter=@apps/hardware-picker-ai",
-    "dev:itfam": "turbo run dev --filter=@apps/itfam",
-    "dev:upwork": "turbo run dev --filter=@apps/upwork",
+    "dev:web": "turbo run dev --filter=./apps/top-tokens",
+    "dev:hardware": "turbo run dev --filter=./apps/hardware-picker-ai",
+    "dev:itfam": "turbo run dev --filter=./apps/itfam",
+    "dev:upwork": "turbo run dev --filter=./apps/upwork",
+
     "build": "turbo run build",
-    "build:web": "turbo run build --filter=@apps/top-tokens",
-    "build:hardware": "turbo run build --filter=@apps/hardware-picker-ai",
-    "build:itfam": "turbo run build --filter=@apps/itfam",
-    "build:upwork": "turbo run build --filter=@apps/upwork",
-    "start:web": "turbo run start --filter=@apps/top-tokens",
-    "start:hardware": "turbo run start --filter=@apps/hardware-picker-ai",
-    "start:itfam": "turbo run start --filter=@apps/itfam",
-    "start:upwork": "turbo run start --filter=@apps/upwork"
+    "build:web": "turbo run build --filter=./apps/top-tokens",
+    "build:hardware": "turbo run build --filter=./apps/hardware-picker-ai",
+    "build:itfam": "turbo run build --filter=./apps/itfam",
+    "build:upwork": "turbo run build --filter=./apps/upwork",
+
+    "start:web": "turbo run start --filter=./apps/top-tokens",
+    "start:hardware": "turbo run start --filter=./apps/hardware-picker-ai",
+    "start:itfam": "turbo run start --filter=./apps/itfam",
+    "start:upwork": "turbo run start --filter=./apps/upwork"
   }
 }
