--- a/toolbox/package.json
+++ b/toolbox/package.json
@@ -9,6 +9,7 @@
     "./styles/*": "./styles/*"
   },
   "dependencies": {
+    "@next/third-parties": "^15.4.6",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.3",
     "normalize.css": "^8.0.1"
