--- a/apps/upwork/package.json
+++ b/apps/upwork/package.json
@@ -10,16 +10,17 @@
   },
   "dependencies": {
     "@next/third-parties": "^15.4.6",
-    "next": "15.4.6",
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
+    "lucide-react": "^0.539.0",
+    "next": "catalog:",
+    "react": "catalog:",
+    "react-dom": "catalog:",
     "toolbox": "file:../../toolbox"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^24",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
