--- a/apps/hardware-picker-ai/package.json
+++ b/apps/hardware-picker-ai/package.json
@@ -10,15 +10,15 @@
     "biome:fix": "biome check --write ."
   },
   "dependencies": {
+	"next": "catalog:",
+  	"react": "catalog:",
+  	"react-dom": "catalog:",
     "@next/third-parties": "^15.4.6",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.539.0",
-    "next": "^15.4.6",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1",
     "toolbox": "file:../../toolbox"
   },
@@ -26,8 +26,6 @@
     "@biomejs/biome": "^2.2.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^24",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5"
