--- a/apps/top-tokens/package.json
+++ b/apps/top-tokens/package.json
@@ -9,16 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+	"next": "catalog:",
+  	"react": "catalog:",
+  	"react-dom": "catalog:",
     "@next/third-parties": "^15.4.6",
     "@radix-ui/react-slot": "^1.2.3",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.539.0",
-    "next": "^15.4.6",
     "postcss": "^8.5.6",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
     "toolbox": "file:../../toolbox"
@@ -26,8 +26,6 @@
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
     "@types/node": "^24",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5"
   }
