--- a/toolbox/package.json
+++ b/toolbox/package.json
@@ -9,14 +9,21 @@
     "./styles/*": "./styles/*"
   },
   "dependencies": {
-    "@next/third-parties": "^15.4.6",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.3",
-    "normalize.css": "^8.0.1"
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "normalize.css": "^8.0.1",
+    "tailwind-merge": "^3.3.1"
   },
   "peerDependencies": {
     "react": "^18 || ^19",
     "react-dom": "^18 || ^19"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.3",
+    "typescript": "^5.6.3"
   },
   "sideEffects": [
     "./styles/*.css"
