--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,6 @@
     }
   },
   "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "skipLibCheck": true
 }
