--- a/apps/hardware-picker-ai/package.json
+++ b/apps/hardware-picker-ai/package.json
@@ -10,9 +10,9 @@
     "biome:fix": "biome check --write ."
   },
   "dependencies": {
-	"next": "catalog:",
-  	"react": "catalog:",
-  	"react-dom": "catalog:",
+	"next": "15.4.6",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "@next/third-parties": "^15.4.6",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.3",
