--- a/apps/top-tokens/package.json
+++ b/apps/top-tokens/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-	"next": "catalog:",
-  	"react": "catalog:",
-  	"react-dom": "catalog:",
+	"next": "15.4.6",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "@next/third-parties": "^15.4.6",
     "@radix-ui/react-slot": "^1.2.3",
     "autoprefixer": "^10.4.21",
