--- a/apps/upwork/package.json
+++ b/apps/upwork/package.json
@@ -11,16 +11,16 @@
   "dependencies": {
     "@next/third-parties": "^15.4.6",
     "lucide-react": "^0.539.0",
-    "next": "catalog:",
-    "react": "catalog:",
-    "react-dom": "catalog:",
+    "next": "15.4.6",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "toolbox": "file:../../toolbox"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^24",
-    "@types/react": "catalog:",
-    "@types/react-dom": "catalog:",
+    "@types/react": "19.1.10",
+    "@types/react-dom": "19.1.7",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
