--- a/apps/upwork/package.json
+++ b/apps/upwork/package.json
@@ -14,7 +14,7 @@
     "next": "15.4.6",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "toolbox": "file:../../toolbox"
+    "toolbox": "workspace:*"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
