--- a/turbo.json
+++ b/turbo.json
@@ -4,6 +4,7 @@
     "build": { "dependsOn": ["^build"], "outputs": [".next/**", "dist/**"] },
     "dev": { "cache": false },
     "start": { "cache": false },
-    "lint": {}
+    "lint": {},
+    "biome": {}
   }
 }
