--- a/toolbox/package.json
+++ b/toolbox/package.json
@@ -14,7 +14,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "normalize.css": "^8.0.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.3.6",
+    "tailwindcss": "^4"
   },
   "peerDependencies": {
     "react": "^18 || ^19",
