--- a/apps/upwork/extension/manifest.json
+++ b/apps/upwork/extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Upwork Apply Advisor",
+  "name": "Upwork AI Job Analyzer",
   "version": "0.0.3",
   "description": "Instantly analyze any Upwork job post and get AI-powered advice on whether it’s worth applying.",
   "host_permissions": ["https://www.upwork.com/*"],
