--- a/apps/upwork/extension/manifest.json
+++ b/apps/upwork/extension/manifest.json
@@ -1,9 +1,35 @@
 {
   "manifest_version": 3,
   "name": "Upwork AI Job Analyzer",
+  "short_name": "Upwork Analyzer",
   "version": "0.0.3",
+  "version_name": "0.0.3 (MVP)",
   "description": "Instantly analyze any Upwork job post and get AI-powered advice on whether it’s worth applying.",
+
+  "icons": {
+    "36": "icons/icon-36X36.png",
+    "48": "icons/icon-48X48.png",
+    "72": "icons/icon-72X72.png",
+    "96": "icons/icon-96X96.png",
+    "128": "icons/icon-128X128.png"
+  },
+
+  "action": {
+    "default_title": "Analyze current Upwork job",
+    "default_icon": {
+      "36": "icons/icon-36X36.png",
+      "48": "icons/icon-48X48.png",
+      "72": "icons/icon-72X72.png",
+      "96": "icons/icon-96X96.png",
+      "128": "icons/icon-128X128.png"
+    }
+  },
+
+  "minimum_chrome_version": "110",
+
   "host_permissions": ["https://www.upwork.com/*"],
+  "permissions": [],
+
   "content_scripts": [
     {
       "matches": ["https://www.upwork.com/*"],
@@ -11,11 +37,17 @@
       "run_at": "document_idle"
     }
   ],
+
   "web_accessible_resources": [
     {
-      "resources": ["styles/normalize.css", "styles/basic.css", "styles/app.css", "modules/*"],
+      "resources": ["styles/normalize.css", "styles/basic.css", "styles/app.css", "modules/*", "icons/*"],
       "matches": ["https://www.upwork.com/*"]
     }
   ],
-  "action": {}
+
+  "incognito": "spanning",
+
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
+  }
 }
