--- a/toolbox/package.json
+++ b/toolbox/package.json
@@ -9,23 +9,23 @@
     "./styles/*": "./styles/*"
   },
   "dependencies": {
-    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "normalize.css": "^8.0.1",
     "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.3.6",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4.1.13",
+    "tw-animate-css": "^1.3.8"
   },
   "peerDependencies": {
     "react": "^18 || ^19",
     "react-dom": "^18 || ^19"
   },
   "devDependencies": {
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
-    "typescript": "^5"
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "typescript": "^5.9.2"
   },
   "sideEffects": [
     "./styles/*.css"
