--- a/apps/hardware-picker-ai/package.json
+++ b/apps/hardware-picker-ai/package.json
@@ -10,24 +10,26 @@
     "biome:fix": "biome check --write ."
   },
   "dependencies": {
-    "@next/third-parties": "^15.5.3",
+    "@next/third-parties": "^15.5.4",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
-    "next": "15.5.3",
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
+    "next": "15.5.4",
+    "next-auth": "^4.24.11",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-hook-form": "^7.63.0",
     "tailwind-merge": "^3.3.1",
     "toolbox": "file:../../toolbox"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.2.4",
-    "@tailwindcss/postcss": "^4.1.13",
-    "@types/node": "^24.5.2",
-    "tailwindcss": "^4.1.13",
-    "tw-animate-css": "^1.3.8",
-    "typescript": "^5.9.2"
+    "@biomejs/biome": "^2.2.5",
+    "@tailwindcss/postcss": "^4.1.14",
+    "@types/node": "^24.6.2",
+    "tailwindcss": "^4.1.14",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.3"
   }
 }
