--- a/apps/hardware-picker-ai/tsconfig.json
+++ b/apps/hardware-picker-ai/tsconfig.json
@@ -6,6 +6,6 @@
     "allowJs": true,
     "strict": false
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/types/**/*.d.ts"],
   "exclude": ["node_modules"]
 }
