--- a/apps/hardware-picker-ai/package.json
+++ b/apps/hardware-picker-ai/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next/third-parties": "^15.5.4",
     "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
